Eliminate Boolean construction
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@324603 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 1bb6502d43e542dc3bfa4be6f906ec2a1170c62e